# product_tiki_api_crawling

./: .gitignore  README.md  id_product.csv  pyproject.toml  requirements.txt
data/: products_batch_1.json  products_batch_10.json  products_batch_100.json  products_batch_101.json  products_batch_102.json  products_batch_103.json  products_batch_104.json  products_batch_105.json  products_batch_106.json  products_batch_107.json  products_batch_108.json  products_batch_109.json  products_batch_11.json  products_batch_110.json  products_batch_111.json  products_batch_112.json  products_batch_113.json  products_batch_114.json  products_batch_115.json  products_batch_116.json  products_batch_117.json  products_batch_118.json  products_batch_119.json  products_batch_12.json  products_batch_120.json  products_batch_121.json  products_batch_122.json  products_batch_123.json  products_batch_124.json  products_batch_125.json  products_batch_126.json  products_batch_127.json  products_batch_128.json  products_batch_129.json  products_batch_13.json  products_batch_130.json  products_batch_131.json  products_batch_132.json  products_batch_133.json  products_batch_134.json  (+124 more)
environment/: config.yml
output/: products_batch_1.json  products_batch_10.json  products_batch_100.json  products_batch_101.json  products_batch_102.json  products_batch_103.json  products_batch_104.json  products_batch_105.json  products_batch_106.json  products_batch_107.json  products_batch_108.json  products_batch_109.json  products_batch_11.json  products_batch_110.json  products_batch_111.json  (+183 more)
(+12 files in other folders)
