[project]
name = "product-tiki-api-crawling"
version = "0.1.0"
description = ""
authors = [
    {name = "Tan, Huynh Nguyen Ngoc",email = "ngoctan300904@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "charset-normalizer (>=3.4.3,<4.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "idna (>=3.10,<4.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "soupsieve (>=2.8,<3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
